# REPETITOR

./: .env.example  .flake8  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  piccolo_conf.py  pyproject.toml
backend/db_scripts/: README.md  add_context_languages.py  add_contexttype.py
backend/dbfilling/: README.md  add_context_languages.py  add_contexttype.py
backend/repetitor_backend/: app.py  piccolo_app.py  tables.py  tables2.py
backend/repetitor_backend/api/: __init__.py
backend/repetitor_backend/external_api/: accents.py  client.py  google.py  google_rest.py  google_rest_autodetect.py  microsoft.py  microsoft_v2.py  prob.py  test_m.py  translate.py
backend/repetitor_backend/piccolo_migrations/: repetitor_backend_2023_05_17t17_16_01_890314.py  repetitor_backend_2023_05_17t17_17_11_850003.py  repetitor_backend_2023_05_18t12_32_46_956090.py  repetitor_backend_2023_05_26t13_17_59_996884.py  repetitor_backend_2023_05_26t13_35_50_235005.py  repetitor_backend_2023_05_26t13_46_46_925186.py  repetitor_backend_2023_05_26t13_47_51_473263.py  repetitor_backend_2023_05_26t16_14_30_510450.py  repetitor_backend_2023_05_26t16_19_59_327290.py  repetitor_backend_2023_05_26t17_36_33_388206.py  repetitor_backend_2023_05_27t13_50_01_850771.py  repetitor_backend_2023_07_02t12_07_47_255382.py  repetitor_backend_2023_07_07t23_50_00.py  (+5 more)
backend/repetitor_help/: piccolo_app.py  tables.py
backend/tests/: test_db_crud_contexttype.py  test_google_translate.py  test_microsoft.py  test_microsoft_lng.py  test_ms_lng_list.py
bot/: Dockerfile  (+4 more)
(+87 files in other folders)
