[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend for project REPETIOTOR"
authors = ["Kostiantyn Zivenko <kos.zivenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
piccolo = {extras = ["all"], version = "^0.111.0"}
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
aiohttp = "^3.8.4"
google-cloud-translate = "^3.11.1"
python-iso639 = "^2023.4.13"



[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
